--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
    </script>
 </head>
 <body>
-  <div id="topnav" class="topnav"> 
-    <!-- <div class="branch-journeys-top" style="display:none;"></div> -->
-    <a id="home" href="index.html"><img src="logo_monster_site.png" width="125px" height="20px"></a>
-    <a id="profile" href="/profile/user.html" class="split"><img src="profileicon.png" width="30px" height="30px"></a>
-    <a id="shop" href="/shop/items.html" class="monster-site-header-button split">Shop</a>
-  </div>
-  <div class="left">
-  <h1 id="home-title-text"> Branch University MonsterSite </h1>
-  <p id="home-description-text"> Monsters of every type to delight and cause a smile. </p>
-  </div>
-  <div class="right">
-  <img src="qr_code.png" id="qr-code">
-  </div>
-  <footer><div class="center-text"><a id="contact-us" href="#" onClick="trackEvent('CONTACT_US')"> Contact Us </a></div></footer>
+  <div id="topnav" class="topnav"> 
+    <a id="home" href="/index.html"><img src="logo_monster_site.png" style="max-width: 120px; height: auto;"></a>
+    <a id="refer" href="/profile/refer.html" class="monster-site-header-button split">Refer</a>
+    <a id="shop" href="/shop/items.html" class="monster-site-header-button split">Shop</a>
+    <a id="profile" href="/profile/user.html" class="split"><img src="profileicon.png" style="max-width: 30px; height: auto;"></a>
+  </div>
+  <div class="left">
+  <h1 id="home-title-text"> Branch University MonsterSite </h1>
+  <p id="home-description-text"> Monsters of every type to delight and cause a smile. </p>
+  </div>
+  <div class="right">
+  <img src="qr_code.png" id="qr-code" style="max-width: 100%; height: auto;">
+  </div>
+  <footer><div class="center-text"><a id="contact-us" href="#" onClick="trackEvent('CONTACT_US')"> Contact Us </a></div></footer>
 </body>
 </html>
