--- a/profile/login.html
+++ b/profile/login.html
@@ -18,12 +18,12 @@
   </script>
 </head>
 <body>
-  <div id="topnav" class="topnav"> 
-    <!-- <div class="branch-journeys-top" style="display:none;"></div> -->
-    <a id="home" href="../index.html"><img src="../logo_monster_site.png" width="125px" height="20px"></a>
-    <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" width="30px" height="30px"></a>
-    <a id="shop" href="/shop/items.html" class="monster-site-header-button split">Shop</a>
-  </div>
+  <div id="topnav" class="topnav"> 
+    <a id="home" href="/index.html"><img src="../logo_monster_site.png" style="max-width: 120px; height: auto;"></a>
+    <a id="refer" href="/profile/refer.html" class="monster-site-header-button split">Refer</a>
+    <a id="shop" href="/shop/items.html" class="monster-site-header-button split">Shop</a>
+    <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" style="max-width: 30px; height: auto;"></a>
+  </div>
   <h1> Login </h1>
   <div>
   <form class="center" onsubmit="return handleUserLoggedIn()">
@@ -35,3 +35,4 @@
   <footer> <div class="center-text"><a id="contact-us" href="#" onClick="trackEvent('CONTACT_US')"> Contact Us </a></div></footer>
 </body>
 </html>
+
