--- a/shop/items.html
+++ b/shop/items.html
@@ -19,15 +19,14 @@
    </script>
 </head>
 <body>
-  <div id="topnav" class="topnav"> 
-    <!-- <div class="branch-journeys-top" style="display:none;"></div> -->
-    <a id="home" href="../index.html"><img src="../logo_monster_site.png" width="125px" height="20px"></a>
-    <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" width="30px" height="30px"></a>
-    <a id="shop" href="/shop/items.html" class="monster-site-header-button split">Shop</a>
-  </div>
+  <div id="topnav" class="topnav"> 
+    <a id="home" href="/index.html"><img src="../logo_monster_site.png" style="max-width: 120px; height: auto;"></a>
+    <a id="refer" href="/profile/refer.html" class="monster-site-header-button split">Refer</a>
+    <a id="shop" href="/shop/items.html" class="monster-site-header-button split">Shop</a>
+    <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" style="max-width: 30px; height: auto;"></a>
+  </div>
   <h1> Shop </h1>
-  <div width="100%">
-      <div class="center">
+  <div>
         <div id="monster-1" class="monster"> 
           <img id="monster-image-1" class="monster-image" src="not_found.png">
           <p id="monster-badge-1" class="monster-badge">travel</p>
@@ -76,7 +75,6 @@
           <p id="monster-title-8" class="monster-title">Little Critter</p>
           <p id="monster-description-8" class="monster-description">Branch provides the industry's leading mobile linking and measurement platforms, unifying user experience and attribution across devices, platforms, and channels.</p>
         </div>
-      </div>
   </div>
   <br>
   <div> <div class="center-text"><a id="contact-us" href="#" onClick="trackEvent('CONTACT_US')"> Contact Us </a></div></div>
