--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 <body>
   <div id="topnav" class="topnav"> 
-    <a id="home" href="/index.html"><img src="logo_monster_site.png" style="max-width: 120px; height: auto;"></a>
+    <a id="home" href="/index.html"><img src="logo_monster_site.png"></a>
     <a id="shop" href="/shop/items.html" class="monster-site-header-button split">Shop</a>
-    <a id="profile" href="/profile/user.html" class="split"><img src="profileicon.png" style="max-width: 30px; height: auto;"></a>
+    <a id="profile" href="/profile/user.html" class="split"><img src="profileicon.png""></a>
   </div>
   <div class="left">
   <h1 id="home-title-text"> Branch University MonsterSite </h1>
