--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Branch Monster Site</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="styles.css">
-  <script src="branch_events.js"></script>
-  <script>
-     // load Branch
-     (function(b,r,a,n,c,h,_,s,d,k){if(!b[n]||!b[n]._q){for(;s<_.length;)c(h,_[s++]);d=r.createElement(a);d.async=1;d.src="https://cdn.branch.io/branch-latest.min.js";k=r.getElementsByTagName(a)[0];k.parentNode.insertBefore(d,k);b[n]=h}})(window,document,"script","branch",function(b,r){b[r]=function(){b._q.push([r,arguments])}},{_q:[],_v:1},"addListener applyCode autoAppIndex banner closeBanner closeJourney creditHistory credits data deepview deepviewCta first getCode init link logout redeem referrals removeListener sendSMS setBranchViewData setIdentity track validateCode trackCommerceEvent logEvent disableTracking qrCode".split(" "), 0);
-     // init Branch
-     branch.init('key_live_otpGUiJWHBS5LLjGLg3h7hgeBrf3mn2q');
-   </script>
+  <meta charset="UTF-8">
+  <title>Branch Monster Site</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
+  <script src="branch_events.js"></script>
+  <script>
+     // load Branch
+     (function(b,r,a,n,c,h,_,s,d,k){if(!b[n]||!b[n]._q){for(;s<_.length;)c(h,_[s++]);d=r.createElement(a);d.async=1;d.src="https://cdn.branch.io/branch-latest.min.js";k=r.getElementsByTagName(a)[0];k.parentNode.insertBefore(d,k);b[n]=h}})(window,document,"script","branch",function(b,r){b[r]=function(){b._q.push([r,arguments])}},{_q:[],_v:1},"addListener applyCode autoAppIndex banner closeBanner closeJourney creditHistory credits data deepview deepviewCta first getCode init link logout redeem referrals removeListener sendSMS setBranchViewData setIdentity track validateCode trackCommerceEvent logEvent disableTracking qrCode".split(" "), 0);
+     // init Branch
+     branch.init('key_live_otpGUiJWHBS5LLjGLg3h7hgeBrf3mn2q');
+   </script>
 </head>
 <body>
   <div id="topnav" class="topnav"> 
-    <a id="home" href="/index.html"><img src="../logo_monster_site.png" style="max-width: 350px; height: auto;"></a>
-    <a id="shop" href="/shop/items.html" class="monster-site-header-button split">Shop</a>
-    <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" style="max-width: 160px; height: auto;"></a>
-  </div>
+    <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img"></a>     <a id="shop" href="/shop/items.html" class="monster-site-header-button split">Shop</a>
+    <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img"></a>   </div>
   <div class="left">
   <h1 id="home-title-text"> Branch University MonsterSite </h1>
   <p id="home-description-text"> Monsters of every type to delight and cause a smile. </p>
