--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 </head>
 <body>
   <div id="topnav" class="topnav"> 
-    <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img" style="width:50%;height:30%;"></a>     
-    <a id="shop" href="/shop/items.html" class="monster-site-header-button split">Shop</a>
-    <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img"></a>   </div>
+    <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img" style="width:40%;height:25%;"></a>     
+    <div style="width:10%;height:25%;">
+    <a id="shop" href="/shop/items.html" class="monster-site-header-button split" style="width:20%;height:25%;">Shop</a>
+    <div style="width:10%;height:25%;">
+    <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img" style="width:20%;height:25%;"></a>   </div>
   <div class="left">
   <h1 id="home-title-text"> Branch University MonsterSite </h1>
   <p id="home-description-text"> Monsters of every type to delight and cause a smile. </p>
