--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 <body>
   <div id="topnav" class="topnav"> 
-    <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img" style="width:40%;height:25%;margin-right: 15%;"></a>     
-    <a id="shop" href="/shop/items.html" class="monster-site-header-button split" style="width:20%;height:25%;">Shop</a>
-    <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img" style="width:7.5%;height:7.5%;"></a>   
+    <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img" style="width:40%;height:25%;margin-right: 20%;"></a>     
+    <a id="shop" href="/shop/items.html" class="monster-site-header-button split" style="width:20%;height:25%;margin-right: 20%;">Shop</a>
+    <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img" style="width:7%;height:7%;"></a>   
   </div>
   <div class="left">
   <h1 id="home-title-text"> Branch University MonsterSite </h1>
