--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div id="topnav" class="topnav"> 
     <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img" style="width:40%;height:25%;margin-right: 20%;"></a>     
-    <a id="shop" href="/shop/items.html" class="monster-site-header-button split" style="width:20%;height:25%;margin-right: 25%;">Shop</a>
+    <a id="shop" href="/shop/items.html" class="split" style="width:20%;height:25%;margin-right: 25%;background-color: #04AA6D;border: none;color: white;padding: 15px 32px;text-align: center;text-decoration: none;display: inline-block;font-size: 16px;margin: 4px 2px;">Shop</a>
     <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img" style="width:7%;height:7%;"></a>   
   </div>
   <div class="left">
