--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
    </script>
 </head>
 <body>
-  <div id="topnav" class="topnav" style="display: flex; align-items: center; height: 30%;"> 
+  <div id="topnav" class="topnav" style="display: flex; align-items: center; height: 50%;"> 
     <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img" style="width:50%;height:80%;margin-right: 20%;"></a>     
-    <a id="shop" href="/shop/items.html" class="split" style="width:10%;height:100%;margin-right: 25%;background-color: #00B4C4;border: none;color: white;text-align: center;text-decoration: none;font-size: 1.5em;margin: 4px 2px;border-radius: 5px;">Shop</a>
-    <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img" style="width:100%;height:100%;"></a>   
+    <a id="shop" href="/shop/items.html" class="split" style="width:10%;height:100%;background-color: #00B4C4;border: none;color: white;text-align: center;text-decoration: none;font-size: 1.5em;margin: 4px 2px;border-radius: 5px;">Shop</a>
+    <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img" style="width:100%;height:100%;margin-left: 25%;"></a>   
   </div>
   <div class="left">
   <h1 id="home-title-text"> Branch University MonsterSite </h1>
