--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    </script>
 </head>
 <body>
-  <div id="topnav" class="topnav" style="display: flex; align-items: center; height: 50%;"> 
+  <div id="topnav" class="topnav" style="display: flex; align-items: center; height: 5em;"> 
     <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img" style="width:50%;height:80%;margin-right: 20%;"></a>     
     <a id="shop" href="/shop/items.html" class="split" style="width:10%;height:100%;background-color: #00B4C4;border: none;color: white;text-align: center;text-decoration: none;font-size: 1.5em;margin: 4px 2px;border-radius: 5px;">Shop</a>
     <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img" style="width:100%;height:100%;margin-left: 25%;"></a>   
