--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
    </script>
 </head>
 <body>
-  <div id="topnav" class="topnav" style="display: flex; align-items: center; justify-content: space-between; height: 8em; padding: 0 5%;">
-    <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img" style="width:50%;height:80%;margin-right: 20%;"></a>     
-    <a id="shop" href="/shop/items.html" class="split" style="width:10%;height:40%;background-color: #00B4C4;border: none;color: white;text-align: center;text-decoration: none;font-size: 2em;margin: 4px 2px;border-radius: 5px;display: flex;align-items: center;justify-content: center;">Shop</a>
-    <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img" style="width:100%;height:100%;margin-left: 25%;"></a>   
-  </div>
+  <div id="topnav" class="topnav"> 
+    <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img"></a>
+    <a id="shop" href="/shop/items.html" class="monster-site-header-button split">Shop</a>
+    <a id="profile" href="/profile/user.html" class="split profile-link"><img src="../profileicon.png" class="profile-img"></a>
+</div>
   <div class="left">
   <h1 id="home-title-text"> Branch University MonsterSite </h1>
   <p id="home-description-text"> Monsters of every type to delight and cause a smile. </p>
