--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
    </script>
 </head>
 <body>
-  <div id="topnav" class="topnav"> 
-    <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img"></a>
-    <a id="shop" href="/shop/items.html" class="monster-site-header-button split">Shop</a>
-    <a id="profile" href="/profile/user.html" class="split profile-link"><img src="../profileicon.png" class="profile-img"></a>
-</div>
+  <div id="topnav" class="topnav">
+        <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img"></a>
+        <a id="shop" href="/shop/items.html" class="split">Shop</a>
+        <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img"></a>
+  </div>
   <div class="left">
   <h1 id="home-title-text"> Branch University MonsterSite </h1>
   <p id="home-description-text"> Monsters of every type to delight and cause a smile. </p>
