--- a/shop/item-detail.html
+++ b/shop/item-detail.html
@@ -15,11 +15,11 @@
    </script>
 </head>
 <body onload="loadMonsterDetails()">
-  <div id="topnav" class="topnav"> 
-    <a id="home" href="/index.html"><img src="../logo_monster_site.png" style="max-width: 120px; height: auto;"></a>
-    <a id="shop" href="/shop/items.html" class="monster-site-header-button split">Shop</a>
-    <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" style="max-width: 30px; height: auto;"></a>
-  </div>
+ <div id="topnav" class="topnav">
+        <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img"></a>
+        <a id="shop" href="/shop/items.html" class="split">Shop</a>
+        <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img"></a>
+  </div>
   <div id="details" class="center">
     <div id="monster-details-container">
     <img src="branch-logo.png" id="monster-detail-image" style="width:20em;">
