--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <a id="shop" href="/shop/items.html" class="split">Shop</a>
         <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img"></a>
   </div>
-  <div class="left">
+  <div>
   <h1 id="home-title-text"> Branch University MonsterSite </h1>
   <p id="home-description-text"> Monsters of every type to delight and cause a smile. </p>
   </div>
-  <div class="right">
+  <div>
   <img src="qr_code.png" id="qr-code" style="max-width: 100%; height: auto;">
   </div>
   <footer><div class="center-text"><a id="contact-us" href="#" onClick="trackEvent('CONTACT_US')"> Contact Us </a></div></footer>
