--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <h1 id="home-title-text"> Branch University MonsterSite </h1>
   <p id="home-description-text"> Monsters of every type to delight and cause a smile. </p>
   </div>
-  <div>
+  <div class="image-container">
   <img src="qr_code.png" id="qr-code" style="max-width: 100%; height: auto;">
   </div>
   <footer><div class="center-text"><a id="contact-us" href="#" onClick="trackEvent('CONTACT_US')"> Contact Us </a></div></footer>
