--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
   <div id="topnav" class="topnav">
         <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img"></a>
-        <a id="shop" href="/shop/items.html" class="split">Shop</a>
-        <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img"></a>
+        <a id="shop" href="/shop/items.html">Shop</a>
+        <a id="profile" href="/profile/user.html"><img src="../profileicon.png" class="profile-img"></a>
   </div>
   <div>
   <h1 id="home-title-text"> Branch University MonsterSite </h1>
