--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   <div>
   <h1 id="home-title-text"> Branch University MonsterSite </h1>
-  <p id="home-description-text"> Monsters of every type to delight and cause a smile. </p>
+  <h3 id="home-description-text"> Monsters of every type to delight and cause a smile. </h3>
   </div>
   <div class="image-container">
   <img src="qr_code.png" id="qr-code" style="max-width: 100%; height: auto;">
