--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a id="shop" href="/shop/items.html">Shop</a>
         <a id="profile" href="/profile/user.html"><img src="../profileicon.png" class="profile-img"></a>
   </div>
-  <div>
+  <div class="header-content-container">
   <h1 id="home-title-text"> Branch University MonsterSite </h1>
   <p id="home-description-text"> Monsters of every type to delight and cause a smile. </p>
   </div>
