--- a/profile/user.html
+++ b/profile/user.html
@@ -15,10 +15,10 @@
     </script>
 </head>
 <body>
-   <div id="topnav" class="topnav">
+  <div id="topnav" class="topnav">
         <a id="home" href="/index.html"><img src="../logo_monster_site.png" class="logo-img"></a>
-        <a id="shop" href="/shop/items.html" class="split">Shop</a>
-        <a id="profile" href="/profile/user.html" class="split"><img src="../profileicon.png" class="profile-img"></a>
+        <a id="shop" href="/shop/items.html">Shop</a>
+        <a id="profile" href="/profile/user.html"><img src="../profileicon.png" class="profile-img"></a>
   </div>
   <h1 id="profile-header-text"> Profile </h1>
     <div><img id="profile-image" src="profileicon_large.png" class="center"></div>
